Fixed letter spacing problem on mobile. Removed commented code.

--- a/pages/simple/ClientsSection/style.css
+++ b/pages/simple/ClientsSection/style.css
@@ -36,7 +36,7 @@
 	composes: heading from "../defaults.css";
 	margin-top: 1rem;
 	text-transform: uppercase;
-	letter-spacing: 0.5rem;
+	letter-spacing: 0.2rem;
 	line-height: 1;
 	z-index: 10;
 }
@@ -124,6 +124,9 @@
 	}
 	.image {
 		padding-top: 0;
+	}
+	.heading {
+		letter-spacing: 0.5rem;
 	}
 	.description {
 		padding-left: 12rem;
