--- a/pages/simple/FrontendSection/style.css
+++ b/pages/simple/FrontendSection/style.css
@@ -35,7 +35,7 @@
 .heading {
 	composes: heading from "../defaults.css";
 	margin-top: 1rem;
-	letter-spacing: 0.5rem;
+	letter-spacing: 0.2rem;
 	line-height: 1;
 	z-index: 10;
 }
@@ -109,6 +109,9 @@
 		padding: 0 5rem 0 0;
 		flex-basis: 60%;
 		position: relative;
+	}
+	.heading {
+		letter-spacing: 0.5rem;
 	}
 	.preview {
 		flex-basis: 40%;
